Library editor bar button sizing and bottom padding fix on mobile

--- a/full-js/styles/library.css
+++ b/full-js/styles/library.css
@@ -38,6 +38,12 @@
     #libraryTabHub.nav {
         flex-flow: wrap-reverse;
     }
+    #libraryFoldersEditor button.pb-2 {
+        padding-bottom: 0.84rem!important;
+    }
+    #libraryProductsEditor button.pb-2 {
+        padding-bottom: 0.84rem!important;
+    }
     #libraryFoldersEditor.position-absolute {
         position: relative!important;
     }
